h264: reset got_{sps,pps} when corrupted SPS/PPS headers are parsed.

Reset got_{sps,pps} when corrupted SPS/PPS headers are parsed. This means
that no frame will be decoded until valid SPS/PPS headers are parsed again.
This also prevents from parsing slice headers with invalid data, and avoids
potential crashes.

https://bugs.freedesktop.org/show_bug.cgi?id=57902